objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>zqu__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Terms__c</fullName>
        <description>Special Terms and Notes for the Quote.</description>
        <inlineHelpText>Special Terms and Notes for the Quote.</inlineHelpText>
        <label>Special Terms and Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total(Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__Total__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__ValidUntil__c</fullName>
        <description>The Date that the Quote is Valid until.</description>
        <inlineHelpText>The Date that the Quote is Valid until.</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraAccountID__c</fullName>
        <label>Zuora Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountId__c</fullName>
        <label>Zuora Parent Billing Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountName__c</fullName>
        <label>Zuora Parent Billing Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraPaymentID__c</fullName>
        <label>Zuora Payment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraSubscriptionID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Subscription ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Zuora_Account_Number__c</fullName>
        <label>Zuora Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>zqu__All_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__SubscriptionType__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>zqu__AutoRenew__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Amendment_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Amend Subscription</value>
        </filters>
        <label>Amendment Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Cancellation_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__CancellationDate__c</columns>
        <columns>zqu__CancellationEffectiveDate__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Cancel Subscription</value>
        </filters>
        <label>Cancellation Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__New_Subscription_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__PaymentTerm__c</columns>
        <columns>zqu__PaymentMethod__c</columns>
        <columns>zqu__Previewed_MRR__c</columns>
        <columns>zqu__Previewed_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>New Subscription</value>
        </filters>
        <label>New Subscription Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Renewal_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Renew Subscription</value>
        </filters>
        <label>Renewal Quotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>zqu__Amendment</fullName>
        <active>true</active>
        <description>Record Type for Amendment Quote, assigned with Amendment Page Layout</description>
        <label>Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Amendment_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for amend Subscription Quote after sent to Z-Billing, assigned with Amendment Read Only Page Layout</description>
        <label>Amendment ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <description>Record Type for Quote Default, assigned with Quote Default Page Layout</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for New Subscription Quote after sent to Z-Billing, assigned with Quote Read Only Page Layout</description>
        <label>ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal</fullName>
        <active>true</active>
        <description>Record Type for Quote Renewal, assigned with Renewal Page Layout</description>
        <label>Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for renew subscription Quote after sent to Z-Billing, assigned with Renewal Read Only Page Layout</description>
        <label>Renewal ReadOnly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zqu__ValidateCustomerAcceptanceDate</fullName>
        <active>true</active>
        <description>Validate whether Customer Acceptance Date is equal or after Service Activation Date</description>
        <errorConditionFormula>AND 
     ( NOT ( ISNULL (   zqu__Customer_Acceptance_Date__c   ) ),
       OR 
           ( 
             zqu__Customer_Acceptance_Date__c &lt;   zqu__Service_Activation_Date__c,
             zqu__Customer_Acceptance_Date__c &lt;    zqu__StartDate__c 
           )
     )</errorConditionFormula>
        <errorDisplayField>zqu__Customer_Acceptance_Date__c</errorDisplayField>
        <errorMessage>Customer Acceptance Date cannot be before Service Activation Date or Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateServiceActivationDate</fullName>
        <active>true</active>
        <description>Validate whether Service Activation Date is equal or after Start Date</description>
        <errorConditionFormula>AND 
     ( NOT ( ISNULL (  zqu__Service_Activation_Date__c  ) ),
       zqu__Service_Activation_Date__c &lt;  zqu__StartDate__c 
     )</errorConditionFormula>
        <errorDisplayField>zqu__Service_Activation_Date__c</errorDisplayField>
        <errorMessage>Service Activation Date cannot be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateSubscriptionTermedType</fullName>
        <active>true</active>
        <description>[Deprecated]</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>zqu__Subscription_Term_Type__c</errorDisplayField>
        <errorMessage>[Deprecated]</errorMessage>
    </validationRules>
</CustomObject>